# pglistener_poc

./: Cargo.toml  README.md
.github/workflows/: check.yml  test.yml
src/: lib.rs  listener_setup.sql  main.rs
