[package]
name = "psql-listener-handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres"] }
serde = "1.0.147"
serde_json = "1.0.89"
